Correccione de lenguaje

--- a/aplicacionraiz2022postgress/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/aplicacionraiz2022postgress/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model RegisterConfirmationModel
 @{
-    ViewData["Title"] = "Register confirmation";
+    ViewData["Title"] = "Confirmacion";
 }
 
 <h1>@ViewData["Title"]</h1>
@@ -9,8 +9,7 @@
     if (@Model.DisplayConfirmAccountLink)
     {
 <p>
-    This app does not currently have a real email sender registered, see <a href="https://aka.ms/aspaccountconf">these docs</a> for how to configure a real email sender.
-    Normally this would be emailed: <a id="confirm-link" href="@Model.EmailConfirmationUrl">Click here to confirm your account</a>
+    <h3>Por favor</h3> <h1><a id="confirm-link" href="@Model.EmailConfirmationUrl">HAGA CLICK AQUI PARA CONFIRMAR LA CREACION DE SU CUENTA</a></h1>
 </p>
     }
     else
