--- a/aplicacionraiz2022postgress/Views/Catalogo/Details.cshtml
+++ b/aplicacionraiz2022postgress/Views/Catalogo/Details.cshtml
@@ -11,7 +11,7 @@
                 <div class="card-body">
                   <div class="card-img-actions">
                     <img class="img-responsive" width="370" height="350"
-                       src="/images/@Html.DisplayFor(model => model.ImageName)" alt="@Html.DisplayFor(model => model.ImageName)"  />
+                       src="@Html.DisplayFor(model => model.ImageName)" alt="@Html.DisplayFor(model => model.ImageName)"  />
                   </div>
                 </div>
                 <div class="card-body">
