--- a/aplicacionraiz2022postgress/Views/Producto/Delete.cshtml
+++ b/aplicacionraiz2022postgress/Views/Producto/Delete.cshtml
@@ -30,6 +30,18 @@
             @Html.DisplayFor(model => model.Subclase)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Keywords)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Keywords)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Estado)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Estado)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Descripcion)
         </dt>
         <dd class = "col-sm-10">
