--- a/aplicacionraiz2022postgress/Views/MenuAdmin/index.cshtml
+++ b/aplicacionraiz2022postgress/Views/MenuAdmin/index.cshtml
@@ -10,7 +10,8 @@
     </div>
     <div class="Menu">
         <h1 class="display-4"><b>Menu Administrador</b></h1>
-        <br> <br> <br> <br>
+        <br><br><br>
+        <a class="btn btn-dark btn-lg btn-block" asp-controller="Producto" asp-action="Index">Productos</a>
         <br><br><br>
         <a class="btn btn-dark btn-lg btn-block" asp-controller="MenuAdmin" asp-action="Menureclamos">Lista de Contacto</a>
         <br><br><br>
