--- a/aplicacionraiz2022postgress/Views/Producto/index.cshtml
+++ b/aplicacionraiz2022postgress/Views/Producto/index.cshtml
@@ -25,7 +25,7 @@
                 @Html.DisplayNameFor(model => model.PorcentajeDescuento)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ImageName)
+                URL de imagen
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Status)
