--- a/aplicacionraiz2022postgress/Views/Shared/_Layout.cshtml
+++ b/aplicacionraiz2022postgress/Views/Shared/_Layout.cshtml
@@ -22,6 +22,13 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
+                            <li class="nav-item">
+            <form asp-controller="Catalogo" asp-action="index">
+                 <div class="form-outline" style="width: 200px;">
+                     <input type="text" id="searchString" class="form-control" placeholder="Buscar_Producto" aria-label="searchString" name="searchString"/>
+                </div>
+            </form>
+    </li> 
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Inicio</a>
                         </li>
@@ -33,9 +40,6 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Catalogo" asp-action="Index">Catalogo</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Producto" asp-action="Index">Productos</a>
                         </li>
                         <li class="nav-item ">
                             <a class="nav-link text-dark" asp-area="" asp-controller="MenuAdmin" asp-action="Index">Menu Administrador </a>
