--- a/aplicacionraiz2022postgress/Views/Contacto/IndexadminResueltos.cshtml
+++ b/aplicacionraiz2022postgress/Views/Contacto/IndexadminResueltos.cshtml
@@ -10,22 +10,22 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Id)
+                ID
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.name)
+                NOMBRE
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.email)
+                CORREO
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.subject)
+                ASUNTO
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.comment)
+                COMENTARIO
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Status)
+                STATUS
             </th>
             <th>
             <th></th>
