--- a/aplicacionraiz2022postgress/Views/Producto/Create.cshtml
+++ b/aplicacionraiz2022postgress/Views/Producto/Create.cshtml
@@ -84,6 +84,11 @@
                 <input asp-for="ImageName" class="form-control" />
                 <span asp-validation-for="ImageName" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Image3D" class="control-label">Direccion de 3D</label>
+                <input asp-for="Image3D" class="form-control" />
+                <span asp-validation-for="Image3D" class="text-danger"></span>
+            </div>
 
 
             <p>--------------------------</p>
