--- a/aplicacionraiz2022postgress/Views/Producto/Delete.cshtml
+++ b/aplicacionraiz2022postgress/Views/Producto/Delete.cshtml
@@ -66,6 +66,12 @@
             @Html.DisplayFor(model => model.ImageName)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Image3D)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Image3D)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Status)
         </dt>
         <dd class = "col-sm-10">
