--- a/aplicacionraiz2022postgress/Views/Shared/_Layout.cshtml
+++ b/aplicacionraiz2022postgress/Views/Shared/_Layout.cshtml
@@ -94,7 +94,7 @@
         <div class="col-lg-6 col-md-8 mb-4 mb-md-0">
              <h3 align="center">UBICANOS</h3>
              <div align="right">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3901.6000258150057!2d-76.96077278540223!3d-12.071017545638174!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c6fa0064aa1b%3A0x26cef28da66557bf!2sCETPRO%20-%20La%20Molina!5e0!3m2!1ses-419!2spe!4v1653344757341!5m2!1ses-419!2spe" width="450" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3901.5854482147315!2d-76.94435494935226!3d-12.072018545616295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c6e79034dc63%3A0x393610bdc506718b!2sFacultad%20de%20Ingenier%C3%ADa%20y%20Arquitectura%20-%20USMP!5e0!3m2!1ses-419!2spe!4v1660853272730!5m2!1ses-419!2spe" width="450" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
          </div>
     </div>
