--- a/aplicacionraiz2022postgress/Views/Shared/_Layout.cshtml
+++ b/aplicacionraiz2022postgress/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
                     <img class="img-responsive" width="3%" height="3%" src="/images/31.png" alt="/images/31.png"  />
-                    OLD Goods</a>
+                    OLD'S Goods</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -41,9 +41,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Catalogo" asp-action="Index">Catalogo</a>
                         </li>
-                        <li class="nav-item ">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="MenuAdmin" asp-action="Index">Menu Administrador </a>
-                        </li> 
+                        <li>
+                            <partial name="_MenuPartial" />
+                        </li>
+                        <li class="nav-item">
+            
+        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
