--- a/aplicacionraiz2022postgress/Views/Producto/Edit.cshtml
+++ b/aplicacionraiz2022postgress/Views/Producto/Edit.cshtml
@@ -55,10 +55,10 @@
                 <label asp-for="Estado" class="control-label"></label>
                 <br>
                 <br>
-                <input asp-for="Estado" type="radio" value="Activo">
+                <input asp-for="Estado" type="radio" value="Nuevo">
                 <label asp-for="Estado" for="html">Nuevo</label><br>
                 <br>
-                <input asp-for="Estado" type="radio" value="Inactivo">
+                <input asp-for="Estado" type="radio" value="Antiguo">
                 <label asp-for="Estado" for="html">Antiguo</label><br>
                 <br>
             </div>
