--- a/aplicacionraiz2022postgress/Views/Shared/_LoginPartial.cshtml
+++ b/aplicacionraiz2022postgress/Views/Shared/_LoginPartial.cshtml
@@ -6,6 +6,9 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
+        <a  class="nav-link text-dark" asp-area=""  asp-controller="Proforma" asp-action="Index"><b>Carrito</b></a>
+    </li>
+    <li class="nav-item">
         <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hola @User.Identity?.Name!</a>
     </li>
     <li class="nav-item">
