--- a/aplicacionraiz2022postgress/Views/Catalogo/Details.cshtml
+++ b/aplicacionraiz2022postgress/Views/Catalogo/Details.cshtml
@@ -19,7 +19,7 @@
                   <p class="card-text">@Html.DisplayFor(model => model.Descripcion)</p>
                   <h5 class="card-title">@Html.DisplayFor(model => model.Precio)</h5>
                   <a class="btn btn-primary" asp-action="Add" asp-route-id="Item.Id">Agregar a carrito</a>
-                  <a href="https://munisani2.000webhostapp.com/" target="_blank"> Vistas 3D</a>
+                  <a href="@Html.DisplayFor(model => model.Image3D)" target="_blank"> Vistas 3D</a>
                 </div>
               </div>
             </div>
