--- a/aplicacionraiz2022postgress/Views/Proforma/Delete.cshtml
+++ b/aplicacionraiz2022postgress/Views/Proforma/Delete.cshtml
@@ -1,4 +1,5 @@
-@model aplicacionraiz2022postgress.Models.Proforma
+@using System.Data
+@model DataTable
 
 @{
     ViewData["Title"] = "Delete";
@@ -7,6 +8,7 @@
 <h1>Eliminar</h1>
 
 <h3>¿Estas Seguro que deseas eliminar este producto?</h3>
+@foreach (DataRow row in Model.Rows) {
 <div>
     <h4>Produto</h4>
     <hr />
@@ -15,16 +17,16 @@
     <thead>
         <tr>
                <th>
-                @Html.DisplayNameFor(model => model.Id)
+                ID
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Producto.Name)
+                NOMBRE
             </th>
             <th>
-                @Html.DisplayNameFor(model =>model.Cantidad)
+                CANTIDAD
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Precio)
+                PRECIO
             </th>
             <th>
                
@@ -34,19 +36,18 @@
         </tr>
     </thead>
     <tbody>
-
      <tr>
            <td>
-                @Html.DisplayFor(model => model.Id)
+                @row["id"]
             </td>
             <td>
-                @Html.DisplayFor(model => model.Producto.Name)
+                @row["ProductoId"]
             </td>
             <td>
-                @Html.DisplayFor(model => model.Cantidad)
+                @row["Cantidad"]
             </td>
             <td>
-                @Html.DisplayFor(model => model.Precio)
+                @row["Precio"]
             </td>
             <td>
                
@@ -61,8 +62,9 @@
 </table>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
+        <input type="hidden" asp-for="@row.["id"]"/>
         <input type="submit" value="Delete" class="btn btn-danger" /> 
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
+}
