--- a/aplicacionraiz2022postgress/Views/Pago/Create.cshtml
+++ b/aplicacionraiz2022postgress/Views/Pago/Create.cshtml
@@ -1,4 +1,5 @@
 @model aplicacionraiz2022postgress.Models.Pago
+
 @{
     ViewData["Title"] = "Pago";
 }
@@ -48,7 +49,7 @@
                   <label asp-for="MontoTotal" class="control-label"></label>
                 </div>
                 <div class="col-sm-2">
-                  <input asp-for="MontoTotal" class="form-control" data-thousands="," data-decimal="." />
+                  <input type="look" asp-for="MontoTotal" class="form-control" data-thousands="," data-decimal="." />
                 </div>
               </div>  
               <div class="form-group row">
