--- a/aplicacionraiz2022postgress/Views/Producto/Delete.cshtml
+++ b/aplicacionraiz2022postgress/Views/Producto/Delete.cshtml
@@ -1,4 +1,5 @@
-@model aplicacionraiz2022postgress.Models.Producto
+@using System.Data
+@model DataTable
 
 @{
     ViewData["Title"] = "Delete";
@@ -7,81 +8,83 @@
 <h1>Eliminar</h1>
 
 <h3>Esta seguro que quiere borrarlo?</h3>
+@foreach (DataRow row in Model.Rows) {
 <div>
     <h4>Producto</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            Nombre
+            NOMBRE
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
+            @row["Name"]
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Clase)
+            CLASE
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Clase)
+            @row["Clase"]
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Subclase)
+            SUBCLASE
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Subclase)
+            @row["Subclase"]
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Keywords)
+            KEYWORDS
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Keywords)
+            @row["Keywords"]
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Estado)
+            ESTADO
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Estado)
+            @row["Estado"]
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Descripcion)
+            DESCRIPCION
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Descripcion)
+            @row["Descripcion"]
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Precio)
+            PRECIO
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Precio)
+            @row["Precio"]
         </dd>
         <dt class = "col-sm-2">
-            Precio Referencial
+            PRECIO REFERENCIAL
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PorcentajeDescuento)
+            @row["PorcentajeDescuento"]
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImageName)
+            NOMBRE DE IMAGEN
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImageName)
+            @row["ImageName"]
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Image3D)
+            IMAGEN 3D
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Image3D)
+            @row["Image3D"]
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Status)
+            STATUS
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Status)
+            @row["Status"]
         </dd>
     </dl>
 
     <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
+        <input type="hidden" asp-for="@row["id"]" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
+}
