--- a/aplicacionraiz2022postgress/Views/Proforma/index.cshtml
+++ b/aplicacionraiz2022postgress/Views/Proforma/index.cshtml
@@ -26,6 +26,9 @@
                 @Html.DisplayNameFor(model => listItemsCarrito.FirstOrDefault().Precio)
             </th>
             <th>
+                CANTIDAD
+            </th>
+            <th>
             </th>
         </tr>
     </thead>
@@ -40,6 +43,10 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Precio)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Cantidad)
+
             </td>
             <td>|
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
