commit integracion Rec. Imagenes

--- a/aplicacionraiz2022postgress/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/aplicacionraiz2022postgress/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -6,5 +6,5 @@
     <li class="nav-item"><a class="nav-link @ManageNavPages.IndexNavClass(ViewContext)" id="profile" asp-page="./Index">Perfil</a></li>
     <li class="nav-item"><a class="nav-link @ManageNavPages.ChangePasswordNavClass(ViewContext)" id="change-password" asp-page="./ChangePassword">Contraseña</a></li>
     <li class="nav-item"><a class="nav-link @ManageNavPages.PersonalDataNavClass(ViewContext)" id="personal-data" asp-page="./PersonalData">Informacion Personal</a></li>
-    <li><a href="https://appservice02-ab2022ii.azurewebsites.net" class="nav-link">Informacion Personal</a></li>
+    <li><a href="https://appservice02-ab2022ii.azurewebsites.net" class="nav-link">Rec. Imagenes</a></li>
 </ul>
